Fix page not working as expected on smaller devices

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body {
   display: flex;
   flex-direction: column;
+  width: 1440px;
 }
 
 p {
@@ -17,24 +18,25 @@ p {
 }
 
 .upper {
-  padding: 22px 210px;
+  padding: 22px 208px;
   background-color: #1f2937;
 }
 
-.header {
+.upper > .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
 }
 
-.logo,
+.header > .logo,
 .sign-up-box > .left > h3 {
   color: #f9faf8;
   font-size: 24px;
   font-weight: 600;
 }
 
-.links {
+.header > .links {
   display: flex;
   gap: 32px;
   font-size: 18px;
@@ -48,38 +50,37 @@ p {
   gap: 24px;
 }
 
-.left,
-.sub-middle img {
+.sub-middle > .left,
+.sub-middle > img {
   flex: 1 1 0;
 }
 
-.left h1 {
+.sub-middle img {
+  overflow: hidden;
+}
+
+.left > h1 {
   color: #f9faf8;
   font-size: 48px;
   font-weight: 800;
   margin: 0;
 }
 
-.sub-middle > .left p {
+.left > p {
   color: #e5e7eb;
   font-size: 18px;
   margin-top: 2px;
   margin-bottom: 14px;
 }
 
-.left button,
-.sign-up-box .right button {
+button {
   background-color: #3882f6;
-  border-radius: 10px;
+  border-radius: 8px;
   border: none;
   color: #e5e7eb;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 600;
-  padding: 8px 28px;
-}
-
-.sub-middle img {
-  overflow: hidden;
+  padding: 9px 34px;
 }
 
 .middle {
@@ -90,7 +91,7 @@ p {
   padding-bottom: 100px;
 }
 
-.middle h2 {
+.middle > h2 {
   font-size: 36px;
   font-weight: 800;
   color: #1f2937;
@@ -98,7 +99,7 @@ p {
   margin-top: 0;
 }
 
-.middle ul {
+.middle > ul {
   display: flex;
   list-style: none;
   padding: 0;
@@ -133,14 +134,14 @@ p {
   padding: 117px 341px 117px 341px;
 }
 
-.quote h1 {
+.quote > h1 {
   color: hsl(215, 10%, 30%);
   font-size: 36px;
   font-weight: 300;
   font-style: italic;
 }
 
-.quote h2 {
+.quote > h2 {
   text-align: right;
 }
 
@@ -148,21 +149,24 @@ p {
   padding: 96px 208px;
 }
 
-.sign-up-box {
+.bottom > .sign-up-box {
   background-color: #3882f6;
   border-radius: 9px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 48px 120px;
 }
 
 .sign-up-box p {
   color: #e5e7eb;
+  margin-bottom: 0;
+  margin-top: 2px;
 }
 
-.sign-up-box > .right > button {
+#sign-up-button-2 {
   border: 2px solid #f9faf8;
-  color: #f9faf8;
+  padding: 7px 32px;
 }
 
 .footer {
